# obs-studio

plugins/: CMakeLists.txt
plugins/win-overlaymaster/: CMakeLists.txt  overlaymaster.cpp
plugins/win-overlaymaster/data/locale/: en-US.ini  ru-RU.ini
